--- a/docker/services/app/Dockerfile
+++ b/docker/services/app/Dockerfile
@@ -48,9 +48,11 @@ RUN chmod +x /usr/local/bin/install-php-extensions \
         xdebug
 
 # Add user for laravel application
-RUN addgroup -S www && adduser -S -G www www \
-    && chown -R www-data:www-data /var/www/app \
-    && chmod -R 755 /var/www/app
+# RUN addgroup -S www && adduser -S -G www www \
+#     && chown -R www-data:www-data /var/www/app \ 
+#     && chmod -R 755 /var/www/app
+
+RUN chown -R www-data:www-data /var/www/app
 
 # Change current user to www
-USER www
+USER www-data
