--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -17,8 +17,8 @@ services:
       context: .
       dockerfile: ./docker/services/nginx/Dockerfile
     ports:
-      - "8083:80"
-      - "4443:443"
+      - "${NGX_HTTP_PORT}:80"
+      - "${NGX_HTTPS_PORT}:443"
     volumes:
       - type: bind
         source: ./app
@@ -40,14 +40,29 @@ services:
         source: ./docker/data/mysql
         target: /var/lib/mysql
     environment:
-      MYSQL_DATABASE: app
-      MYSQL_ROOT_PASSWORD: root
-      MYSQL_USER: admin
-      MYSQL_PASSWORD: secret
+      MYSQL_DATABASE: '${DB_DATABASE}'
+      MYSQL_ROOT_PASSWORD: '${DB_PASSWORD}'
+      MYSQL_USER: '${DB_USERNAME}'
+      MYSQL_PASSWORD: '${DB_PASSWORD}'
     ports:
-      - "3311:3306"
+      - "${DB_PORT}:3306"
     networks:
       - rede
+
+  phpmyadmin:
+    image: phpmyadmin
+    restart: always
+    ports:
+        - "${PHP_ADMIN_PORT}:80"
+    environment:
+      PMA_ARBITRARY: 1
+       MYSQL_ROOT_PASSWORD: '${DB_PASSWORD}'
+       MYSQL_USER: '${DB_USERNAME}'
+       MYSQL_PASSWORD: '${DB_PASSWORD}'
+       PMA_HOSTS: mysql
+    networks:
+        - rede
+
 networks:
     rede: 
         driver: bridge
