fixing env example

--- a/.env.example
+++ b/.env.example
@@ -1,12 +1,12 @@
-//Mysql
+#Mysql
 DB_DATABASE=dashboard
 DB_PASSWORD=123456
 DB_USERNAME=root
 DB_PORT=3311
 
-//nginx
+#nginx
 NGX_HTTP_PORT=8083
 NGX_HTTPS_PORT=4443
 
-//phpmysadmin
+#phpmysadmin
 PHP_ADMIN_PORT=8084
