--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -49,19 +49,19 @@ services:
     networks:
       - rede
 
-  phpmyadmin:
-    image: phpmyadmin
-    restart: always
-    ports:
-      - "${PHP_ADMIN_PORT}:80"
-    environment:
-      PMA_ARBITRARY: 1
-      MYSQL_ROOT_PASSWORD: '${DB_PASSWORD}'
-      MYSQL_USER: '${DB_USERNAME}'
-      MYSQL_PASSWORD: '${DB_PASSWORD}'
-      PMA_HOSTS: mysql
-    networks:
-      - rede
+  # phpmyadmin:
+  #   image: phpmyadmin
+  #   restart: always
+  #   ports:
+  #     - "${PHP_ADMIN_PORT}:80"
+  #   environment:
+  #     PMA_ARBITRARY: 1
+  #     MYSQL_ROOT_PASSWORD: '${DB_PASSWORD}'
+  #     MYSQL_USER: '${DB_USERNAME}'
+  #     MYSQL_PASSWORD: '${DB_PASSWORD}'
+  #     PMA_HOSTS: mysql
+  #   networks:
+  #     - rede
 
 networks:
     rede: 
