add MYSQL_ROOT_PASSWORD to mysql

--- a/.env.example
+++ b/.env.example
@@ -1,7 +1,8 @@
 #Mysql
 DB_DATABASE=dashboard
+MYSQL_ROOT_PASSWORD=123546
 DB_PASSWORD=123456
-DB_USERNAME=root
+DB_USERNAME=dashboard
 DB_PORT=3311
 
 #nginx
